[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/leaderboard.gd" type="Script" id=1]
[ext_resource path="res://ui/basic_theme.tres" type="Theme" id=2]
[ext_resource path="res://art/sun.png" type="Texture" id=3]
[ext_resource path="res://art/cricle.png" type="Texture" id=4]
[ext_resource path="res://art/question_mark.png" type="Texture" id=5]
[ext_resource path="res://scripts/level_three/info.gd" type="Script" id=6]
[ext_resource path="res://scenes/pop_up_window.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/cheatboard.gd" type="Script" id=8]
[ext_resource path="res://art/tools.png" type="Texture" id=9]
[ext_resource path="res://ui/build_ui.tres" type="Theme" id=10]
[ext_resource path="res://scripts/redo_levels.gd" type="Script" id=11]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "sun_rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "pump_scale"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "pump_scale"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="LeaderBoard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="MainVBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -412.0
margin_top = 16.0
margin_right = 412.0
margin_bottom = 158.0
theme = ExtResource( 2 )
custom_constants/separation = 8

[node name="WelcomeLabel" type="Label" parent="MainVBox"]
margin_right = 824.0
margin_bottom = 22.0

[node name="labels" type="HBoxContainer" parent="MainVBox"]
margin_top = 30.0
margin_right = 824.0
margin_bottom = 52.0

[node name="Name" type="Label" parent="MainVBox/labels"]
margin_right = 150.0
margin_bottom = 22.0
rect_min_size = Vector2( 150, 0 )
text = "Etunimi"

[node name="Surname" type="Label" parent="MainVBox/labels"]
visible = false
margin_left = 154.0
margin_right = 235.0
margin_bottom = 22.0
rect_min_size = Vector2( 50, 0 )
text = "Sukunimi"

[node name="Team" type="Label" parent="MainVBox/labels"]
margin_left = 154.0
margin_right = 354.0
margin_bottom = 22.0
rect_min_size = Vector2( 200, 0 )
text = "Työryhmä"

[node name="Points_2" type="Label" parent="MainVBox/labels"]
margin_left = 358.0
margin_right = 483.0
margin_bottom = 22.0
rect_min_size = Vector2( 125, 0 )
text = "Pisteet - Taso 2"

[node name="Points_3" type="Label" parent="MainVBox/labels"]
margin_left = 487.0
margin_right = 612.0
margin_bottom = 22.0
rect_min_size = Vector2( 125, 0 )
text = "Pisteet - Taso 3"

[node name="student_number" type="Label" parent="MainVBox/labels"]
margin_left = 616.0
margin_right = 816.0
margin_bottom = 22.0
rect_min_size = Vector2( 200, 0 )
text = "Opiskelijanumero"

[node name="InputHBox" type="HBoxContainer" parent="MainVBox"]
margin_top = 60.0
margin_right = 824.0
margin_bottom = 86.0

[node name="NameInput" type="LineEdit" parent="MainVBox/InputHBox"]
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 150, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="SurnameInput" type="LineEdit" parent="MainVBox/InputHBox"]
visible = false
margin_left = 154.0
margin_right = 206.0
margin_bottom = 26.0
rect_min_size = Vector2( 50, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="TeamInput" type="LineEdit" parent="MainVBox/InputHBox"]
visible = false
margin_left = 154.0
margin_right = 206.0
margin_bottom = 26.0
caret_blink = true
caret_blink_speed = 0.5

[node name="TeamSelection" type="SpinBox" parent="MainVBox/InputHBox"]
margin_left = 154.0
margin_right = 354.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
min_value = 1.0
value = 1.0
prefix = "Työryhmä"

[node name="Stage2Input" type="LineEdit" parent="MainVBox/InputHBox"]
margin_left = 358.0
margin_right = 483.0
margin_bottom = 26.0
rect_min_size = Vector2( 125, 0 )
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Stage3Input" type="LineEdit" parent="MainVBox/InputHBox"]
margin_left = 487.0
margin_right = 612.0
margin_bottom = 26.0
rect_min_size = Vector2( 125, 0 )
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="StudentNumberInput" type="LineEdit" parent="MainVBox/InputHBox"]
margin_left = 616.0
margin_right = 816.0
margin_bottom = 26.0
rect_min_size = Vector2( 200, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="SubmitScoreButton" type="Button" parent="MainVBox"]
margin_left = 337.0
margin_top = 94.0
margin_right = 487.0
margin_bottom = 134.0
rect_min_size = Vector2( 150, 40 )
focus_mode = 0
size_flags_horizontal = 4

[node name="successful_submission_message" type="RichTextLabel" parent="."]
visible = false
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 137.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Tuloksesi on onnistuneesti lähetetty leaderboardiin!

Oppimistehtävä suoritettu. Kiitos pelaamisesta![/center]"
text = "Tuloksesi on onnistuneesti lähetetty leaderboardiin!

Oppimistehtävä suoritettu. Kiitos pelaamisesta!"

[node name="RefreshLeaderboardButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 99.0
margin_top = -128.0
margin_right = 299.0
margin_bottom = -88.0
rect_min_size = Vector2( 200, 40 )
focus_mode = 0
size_flags_horizontal = 4
theme = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 100.0
margin_top = 222.0
margin_right = 924.0
margin_bottom = 572.0
rect_min_size = Vector2( 824, 350 )

[node name="LeaderboardGrid" type="GridContainer" parent="ScrollContainer"]
margin_right = 824.0
rect_min_size = Vector2( 824, 0 )
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
custom_constants/hseparation = 30
columns = 5

[node name="leaderboard_timer" type="Timer" parent="."]
one_shot = true

[node name="sun_icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = 48.0
margin_right = 32.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="sun_icon"]
autoplay = "sun_rotate"
anims/RESET = SubResource( 2 )
anims/sun_rotate = SubResource( 1 )

[node name="update_failed_message" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 4.0
margin_right = 200.0
margin_bottom = 204.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Päivittäminen epäonnistui :-(
Yritä myöhemmin uudelleen!

Jos ongelma jatkuu, ota yhteyttä:
tatu.heinamaki@aalto.fi
@tatsoni - Discord ja Telegram[/center]"
text = "Päivittäminen epäonnistui :-(
Yritä myöhemmin uudelleen!

Jos ongelma jatkuu, ota yhteyttä:
tatu.heinamaki@aalto.fi
@tatsoni - Discord ja Telegram"

[node name="info" type="TextureButton" parent="."]
margin_left = 942.0
margin_top = 16.0
margin_right = 1006.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 32, 32 )
hint_tooltip = "Tutustu ohjeisiin"
texture_normal = ExtResource( 5 )
script = ExtResource( 6 )

[node name="bg" type="TextureRect" parent="info"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="info"]
anims/pump_scale = SubResource( 3 )

[node name="info_pop_up_window" parent="." instance=ExtResource( 7 )]
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="info_pop_up_window/Panel" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -171.0
margin_right = 400.0
margin_bottom = 235.0
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="info_text_body" type="RichTextLabel" parent="info_pop_up_window/Panel/ScrollContainer"]
margin_right = 750.0
margin_bottom = 400.0
rect_min_size = Vector2( 750, 400 )
bbcode_enabled = true
bbcode_text = "OHJEET

Leaderboard
Tarkista että tietosi ovat oikein!
Sitten voit lähettää omat pisteesi leaderboardille ja tarkastella sijoittautumistasi suhteessa muihin pelaajiin.

Peli ilmoittaa jos pisteiden lähetys epäonnistuu. Tällöin sinun kannattaa koettaa uudelleen myöhemmin.
Ongelman jatkuessa ole yhteydessä:
tatu.heinamaki@aalto.fi
@tatsoni - Discord ja Telegram"
text = "OHJEET

Leaderboard
Tarkista että tietosi ovat oikein!
Sitten voit lähettää omat pisteesi leaderboardille ja tarkastella sijoittautumistasi suhteessa muihin pelaajiin.

Peli ilmoittaa jos pisteiden lähetys epäonnistuu. Tällöin sinun kannattaa koettaa uudelleen myöhemmin.
Ongelman jatkuessa ole yhteydessä:
tatu.heinamaki@aalto.fi
@tatsoni - Discord ja Telegram"

[node name="settings" type="TextureButton" parent="."]
margin_left = 942.0
margin_top = 88.0
margin_right = 1006.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 32, 32 )
hint_tooltip = "Tutustu ohjeisiin"
texture_normal = ExtResource( 9 )
script = ExtResource( 6 )

[node name="bg" type="TextureRect" parent="settings"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="settings"]
anims/pump_scale = SubResource( 4 )

[node name="settings_pop_up_window" parent="." instance=ExtResource( 7 )]
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="settings_pop_up_window/Panel" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -171.0
margin_right = 400.0
margin_bottom = 235.0
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="info_text_body" type="RichTextLabel" parent="settings_pop_up_window/Panel/ScrollContainer"]
margin_right = 750.0
margin_bottom = 400.0
rect_min_size = Vector2( 750, 400 )
bbcode_enabled = true
bbcode_text = "ASETUKSET

Haluatko palata edelliseen tasoon pelataksesi sen uudelleen? Valitse saatavissa olevat tasot tästä!"
text = "ASETUKSET

Haluatko palata edelliseen tasoon pelataksesi sen uudelleen? Valitse saatavissa olevat tasot tästä!"

[node name="HBoxContainer" type="HBoxContainer" parent="settings_pop_up_window/Panel" index="2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -17.0
margin_right = 50.0
margin_bottom = 17.0

[node name="redo_stage_3" type="Button" parent="settings_pop_up_window/Panel/HBoxContainer"]
margin_right = 100.0
margin_bottom = 34.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 50, 16 )
theme = ExtResource( 10 )
text = "Taso 3"

[node name="cheatboard" type="Node" parent="."]
script = ExtResource( 8 )

[node name="cheatboard_timer" type="Timer" parent="cheatboard"]
wait_time = 5.0
one_shot = true

[node name="cheatboard_sign_in" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
theme = ExtResource( 2 )

[node name="info" type="RichTextLabel" parent="cheatboard_sign_in"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 31.0
margin_right = -9.0
margin_bottom = -148.0
theme = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Olet vaarallisilla vesillä. Anna salasana![/center]"
text = "Olet vaarallisilla vesillä. Anna salasana!"

[node name="password" type="LineEdit" parent="cheatboard_sign_in"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -13.0
margin_right = 57.0
margin_bottom = 13.0

[node name="submit_password" type="Button" parent="cheatboard_sign_in"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.5
margin_top = 27.0
margin_right = 14.5
margin_bottom = 53.0
text = "ok!"

[node name="redo_levels" type="Node" parent="."]
script = ExtResource( 11 )

[connection signal="timeout" from="leaderboard_timer" to="." method="_on_leaderboard_timer_timeout"]
[connection signal="pressed" from="info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="settings_pop_up_window/Panel/HBoxContainer/redo_stage_3" to="redo_levels" method="_on_redo_stage_3_pressed"]
[connection signal="timeout" from="cheatboard/cheatboard_timer" to="cheatboard" method="_on_cheatboard_timer_timeout"]
[connection signal="pressed" from="cheatboard_sign_in/submit_password" to="cheatboard" method="_on_submit_password_pressed"]

[editable path="info_pop_up_window"]
[editable path="settings_pop_up_window"]
